fix eslint error

--- a/package.json
+++ b/package.json
@@ -45,5 +45,17 @@
     "eslint-plugin-react": "^7.3.0",
     "prettier": "^1.9.1"
   },
-  "proxy": "http://localhost:8082"
+  "proxy": "http://localhost:8082",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
