--- a/package.json
+++ b/package.json
@@ -1,61 +1,82 @@
 {
-  "name": "example",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "4.3.1",
-    "glamor": "^2.20.40",
-    "glamorous": "^5.0.0",
-    "gravatar-url": "^3.0.1",
-    "jwt-decode": "^2.2.0",
-    "normalizr": "^3.2.4",
-    "prop-types": "^15.6",
-    "react": "^16.2.0",
-    "react-animations": "^1.0.0",
-    "react-dom": "^16.2.0",
-    "react-intl": "^2.4.0",
-    "react-loader": "^2.4.2",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-saga": "^1.0.5",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^4.0.0",
-    "validator": "^11.0.0"
-  },
+  "name": "nextgraphqlts",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverage --runInBand --detectOpenHandles"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/react-hooks": "latest",
+    "@material-ui/core": "^4.10.0",
+    "@types/mongoose": "^5.7.21",
+    "apollo-cache-inmemory": "latest",
+    "apollo-client": "latest",
+    "apollo-link": "latest",
+    "apollo-link-context": "latest",
+    "apollo-link-error": "latest",
+    "apollo-link-http": "latest",
+    "apollo-link-state": "latest",
+    "apollo-server-micro": "latest",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
+    "cookie-parser": "latest",
+    "formik": "^2.1.4",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "js-cookie": "latest",
+    "jsonwebtoken": "^8.5.1",
+    "micro-cors": "latest",
+    "mongoose": "^5.9.15",
+    "mongoose-paginate-v2": "^1.3.9",
+    "next": "^9.4.2",
+    "next-cookies": "latest",
+    "next-with-apollo": "^5.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-waypoint": "latest",
+    "styled-components": "latest",
+    "ts-node": "^8.10.1",
+    "graphql-type-json": "latest"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.3.0",
-    "prettier": "^1.9.1"
-  },
-  "proxy": "http://localhost:8082",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@apollo/react-testing": "latest",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/graphql-type-json": "^0.3.2",
+    "@types/jest": "^25.2.3",
+    "@types/js-cookie": "^2.2.6",
+    "@types/jsdom": "^16.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/micro-cors": "^0.1.1",
+    "@types/mongoose-paginate-v2": "^1.3.6",
+    "@types/node": "^14.0.4",
+    "@types/react": "^16.9.35",
+    "@types/react-test-renderer": "^16.9.2",
+    "@types/react-virtualized": "^9.21.10",
+    "@types/styled-components": "^5.1.0",
+    "apollo-server": "latest",
+    "apollo-server-testing": "latest",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.0.1",
+    "jest-styled-components": "^7.0.2",
+    "jsdom": "latest",
+    "mockingoose": "^2.13.2",
+    "react-test-renderer": "latest",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.3",
+    "waait": "latest"
   }
 }
